@@ -9,7 +9,7 @@ Author: Jun Yan <jun.yan@uconn.edu> and
  Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Ivan Kojadinovic <ivan.kojadinovic@univ-pau.fr>
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-Depends: R (>= 2.14.0), methods, pspline
+Depends: R (>= 2.14.1), methods, pspline
 Imports: stats4, graphics, gsl, ADGofTest, stabledist (>= 0.6-4), mvtnorm
 Suggests: lattice, MASS, Matrix, KernSmooth, sfsmisc, bbmle, scatterplot3d, Rmpfr,
 	  mvnormtest, tseries, zoo
